indexをindex-originalにし404ページに変更

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body style="margin: 20px" leftmargin="20" topmargin="20" marginwidth="20" marginheight="20">
 
 <div align="left" valign="top">
-<h2>指定したファイルがありません。<br />URLを確認してください。</h2>
+<h2>指定されたファイルはございません。<br />今一度 URLをご確認ください。</h2>
 </div>
 
 <p>(C) ActiveNote.jp</p>
