--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h2>指定されたファイルはございません。<br />今一度 URLをご確認ください。</h2>
 </div>
 
-  <p>(C) <a href="https://www.activenote.jp>ActiveNote.jp</a></p>
+  <p>(C) <a href="https://www.activenote.jp">ActiveNote.jp</a></p>
 
 </body>
 </html>
